package recipeo.activity;

public class CreateCategoryActivity {
}
