package recipeo.activity;

public class CreateRecipeActivity {
}
