package recipeo.activity;

public class GetCategoryActivity {
}
