package recipeo.activity;

public class GetRecipeActivity {
}
