package recipeo.activity;

public class UpdateCategoryActivity {
}
