package recipeo.activity;

public class UpdateRecipeActivity {
}
