package recipeo.dynamodb;

public class CategoryDao {
}
