package recipeo.dynamodb;

public class RecipeDao {
}
