package recipeo.dynamodb.models;

public class Recipe {
}
