@startuml
'https://plantuml.com/class-diagram
RecipeDao o-- GetRecipeActivity
RecipeDao o-- UpdateRecipeActivity
RecipeDao o-- SearchRecipeActivity
RecipeDao o-- CreateRecipeActivity


CategoryDao o--- GetCategoryActivity
CategoryDao o-- UpdateCategoryActivity
CategoryDao o--- CreateCategoryActivity

CategoryDao o-- AddRecipeToCategoryActivity
RecipeDao o-- AddRecipeToCategoryActivity

CategoryDao o-- RemoveRecipeFromCategoryActivity
RecipeDao o-- RemoveRecipeFromCategoryActivity

Recipe o-- User
Category o-- Recipe


class CreateRecipeActivity{
- recipeDao:RecipeDao
--
+ handleRequest(CreateRecipeRequest) : CreateRecipeResult
}

class GetRecipeActivity{
- recipeDao:RecipeDao
--
+ handleRequest(GetRecipeRequest) : GetRecipeResult
}

class UpdateRecipeActivity{
- recipeDao:RecipeDao
--
+ handleRequest(UpdateRecipeRequest) : UpdateRecipeResult
}

class SearchRecipeActivity{
- recipeDao:RecipeDao
--
+ handleRequest(SearchRecipeRequest) : SearchRecipeResult
}

class UpdateCategoryActivity{
- categoryDao:CategoryDao
--
+ handleRequest(UpdateCategoryRequest) : UpdateCategoryResult
}

class GetCategoryActivity{
- categoryDao:CategoryDao
--
+ handleRequest(GetCategoryRequest) : GetCategoryResult
}

class CreateCategoryActivity{
- categoryDao:CategoryDao
--
+ handleRequest(CreateCategoryRequest) : CreateCategoryResult
}

class AddRecipeToCategoryActivity{
- categoryDao:CategoryDao
- recipeDao:RecipeDao
--
+ handleRequest(AddRecipeToCategoryRequest) : AddRecipeToCategoryActivityResult
}

class RemoveRecipeFromCategoryActivity{
- categoryDao:CategoryDao
- recipeDao:RecipeDao
--
+ handleRequest(RemoveRecipeFromCategoryRequest) : RemoveRecipeFromCategoryResult
}

class RecipeDao{
+ getRecipe()
+ saveRecipe()
}

class CategoryDao{
+ getCategory()
+ saveCategory()
}

class User {
- userId:String
- emailId:String
}


class Recipe {
- userId:String
- recipeId:String
- recipeName:String
- servings:Integer
- prepTime:Integer
- cookTime:Integer
- totalTime:Integer
- ingredients:List<String>
- instructions:List<String>
- tags:Set<String>
- lastAccessed:ZonedDateTime
- isFavourite:Boolean
}

class Category {
- userId:String
- categoryId:String
- categoryName:String
- recipeList:List<Recipe>
}


@enduml